--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "compile": "hardhat compile",
     "node": "hardhat node",
     "test": "hardhat test",
-    "deploy": "hardhat deploy"
+    "deploy": "hardhat deploy",
+    "format": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
@@ -14,7 +15,8 @@
     "@uniswap/v3-sdk": "^3.11.0",
     "hardhat": "^2.22.6",
     "hardhat-deploy": "^0.12.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
